all issues found in Products and ProductsTest classes have fixed, the test runs successfully form a to z in ProductsTest